[package]
name = "rml"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.19.1", features = ["wgpu"] }
burn-import = { version = "0.19.1", features = ["safetensors"] }
modelscope = "0.1.0"
openai_dive = "1.3.3"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["full"] }
