[package]
name = "rml"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.19.1", features = ["wgpu", "ndarray"] }
burn-import = { version = "0.19.1", features = ["safetensors"] }
minijinja = "2.14.0"
modelscope = "0.1.0"
openai_dive = "1.3.3"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0.145"
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["full"] }

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# [[example]]
# name = "llm"
# path = "examples/llm.rs"
